compiler/testData/diagnostics/tests/regressions/kt2956.kt
// RUN_PIPELINE_TILL: FRONTEND
val a: String = <!NO_COMPANION_OBJECT!>Nothing<!>

/* GENERATED_FIR_TAGS: propertyDeclaration */
